2005-09-26  Pascal Obry  <pascal@obry.net>

	* regtests.gpr:
	Merge from ada95 branch.
	(Linker): Add -g option.
	Update copyright notice.

2005-09-26  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* accs_proc.adb:
	Do not close not connected socket.

2005-09-14  Pascal Obry  <pascal@obry.net>

	* regtests.gpr:
	(Compiler): Add -gnat05 switch.

	* nonce.adb:
	Fix compilation of this test after the change of containers.

2005-09-14  Pascal Obry  <pascal@obry.net>

	* nvect.ads, nonce.adb:
	Use Ada.Containers instead of internal AI302.
	Update copyright notice.

2005-09-10  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* accs_proc.adb:
	Wait for server tasks complete to stabilize console output in linux.

2005-09-10  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* accs.adb, accs_proc.adb, accs_sec.adb, accs.out accs_sec.out:
	Complete and include into regtest process.

	* afile_sec.adb, hload_sec.adb:
	Add ~ MAIN [SSL] macro.

	* spair_proc.adb, smem_proc.adb:
	Add copyright header and comment.

2005-09-09  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* accs.adb, accs_proc.adb:
	Test for package AWS.Net.Acceptors. Without regtest macro because not
	 complete for now.

2005-09-08  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* smem.out, smem.adb, smem_proc.adb, smem_sec.adb, smem_sec.out:
	New regtest for copy and reuse socket.

2005-09-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* spair.adb, spair_sec.adb, spair.out, spair_sec.out, spair_proc.adb:
	New regression test for connected socket pair creation.

2005-09-05  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* strm.adb, strm.out:
	Add test for header answer with undefined responce length.
	Add UEH routine for to unexpected exceptions.
	Update copyright years.
	Reorder "with" part.

2005-07-13  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* zopen.adb:
	Use Get_Free_Port.

2005-07-07  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws.mime:
	Regular expression is in slashes.

2005-07-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>
